# parabolic-reversal-trading-engine

./: .env.template  .gitignore  AGENTS.md  AI Agent Trading Terminal Manual Construction.docx  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  rebuild_cache.py  requirements.txt  run.py  run_12mo_sweep.sh  run_3mo_analysis.sh  run_3mo_baseline.sh  run_h1_baseline.sh  run_historical_backtest.py  run_q3_baseline.sh  run_q4_10seed.sh  scan_extended_universe.py  wfo_context_README.md
config/: settings.yaml  watchlist.txt
docs/: V5_RELAXED_COMPREHENSIVE_REPORT.md  algorithm_comparison_smoke_2026-05-19.md  asymmetric_thresholds_smoke_2026-05-19.md  discrete_ppo_3mo_baseline_2026-05-21.md  discrete_ppo_final_template.md  final_verdict_2026-05-21.md  mfe_evap_smoke_2026-05-18.md  multi_window_synthesis_2026-05-21.md  oos_methodology_fix_2026-05-20.md  paper_trade_ready_2026-05-21.md  per_setup_loss_attribution_2026-05-20.md  ppo_continuous_smoke_2026-05-19.md  recurrent_ppo_scoping_2026-05-20.md  rl_investigation_synthesis_2026-05-19.md  rule_baseline_generalizes_2026-05-21.md  rule_baseline_verification_2026-05-20.md  scale_out_cover_smoke_2026-05-18.md  start_dashboard.md  sweep_2026-05-18.md  sweep_diagnosis_2026-05-18.md  wider_hold_band_smoke_2026-05-19.md
notebooks/: 01_backtest_walkthrough.ipynb
reports/: loss_attribution_3mo.json  ppo_discrete_3mo_3seed_summary.json  rl_vs_rule_baseline_2026-05-20.json  rl_vs_rule_baseline_2026-05-21-3mo.json  rl_vs_rule_h1.json  rl_vs_rule_q3.json  rule_pooled_attribution.json
scratch/: FIXED_RUN_BACKTEST.py  START_COMPLETE_BACKTEST.bat  analyze_cached_setups.py  analyze_loss_patterns.py  analyze_losses.py  analyze_setup.py  backtest_909_setups.py  check_cache.py  check_csv.py  check_data.py  check_morning.py  check_morning2.py  check_signals.py  check_timezone.py  check_vwap.py  check_wsl.py  clean_data_cache.py  combine_worker_results.py  compare_v5_v6.py  debug_1354.py  debug_all.py  debug_bar.py  debug_bar_agg.py  debug_bar_df.py  debug_bar_tz.py  debug_bars_list.py  debug_cache.py  debug_csv_loading.py  debug_data.py  debug_data_provider.py  debug_date_filter.py  (+101 more)
(+187 files in other folders)
